--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://media.licdn.com/dms/image/v2/D4D03AQFJe7wGLcgcog/profile-displayphoto-shrink_800_800/B4DZUdjj0rG8Ac-/0/1739957616593?e=1752710400&v=beta&t=Cf8RA5cdOefc4pmvx66qlukT_tH-JrM2m1IecM42P3s" style="border-radius:100%;" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>CEPPOL</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
